resources/app-sre-stage/sentry-stage/sentry/sentry.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: sentry
  name: sentry
spec:
  host: sentry.stage.devshift.net
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sentry
    weight: 100
  wildcardPolicy: None
